QR-Scanner überarbeitet: dart:html entfernt, echte Kamera-Integration hinzugefügt

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,18 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+ # QR Code Scanner
+  qr_code_scanner: ^1.0.1
+  
+  # Kamera-Zugang
+  camera: ^0.10.5+5
+  
+  # Geräte-Services
   shared_preferences: ^2.2.2
   crypto: ^3.0.3
-  qr_code_scanner: ^1.0.1
+  
+  # Permissions
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
