--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Diese App benötigt Kamera-Zugriff für QR-Code-Scanning</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -16,6 +14,25 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>flutter_mr_ribs_order_app</string>
+	<!-- ios/Runner/Info.plist -->
+	<!-- Füge diese Zeilen in die Info.plist ein: -->
+
+	<key>NSCameraUsageDescription</key>
+	<string>Diese App benötigt Kamera-Zugriff für QR-Code-Scanning um Restaurants zu identifizieren</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Diese App benötigt Mikrofon-Zugriff für QR-Code-Scanning</string>
+
+	<!-- Minimum iOS Version für QR Scanner -->
+	<key>MinimumOSVersion</key>
+	<string>11.0</string>
+
+	<!-- Kamera-Features -->
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+    <string>camera-flash</string>
+    <string>auto-focus-camera</string>
+	</array>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
