--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
 
+  # Icon Generator (nur für Development)
+  flutter_launcher_icons: ^0.13.1
 flutter:
   uses-material-design: true
   
@@ -36,3 +38,19 @@ flutter:
     - assets/images/flags/
   
   generate: true
+
+  # App-Icon Konfiguration
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/Logo_icon.png"
+  min_sdk_android: 21 # Android 5.0
+  web:
+    generate: true
+    image_path: "assets/images/Logo_icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/Logo_icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
