--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   # Core dependencies (Web-kompatibel)
   shared_preferences: ^2.2.2
   crypto: ^3.0.3
+  http: ^1.1.0  # Für Geocoding-Service hinzufügen
   
   # Moderner QR Scanner (löst Gradle-Probleme)
   mobile_scanner: ^3.5.6
